adding <noscript> to index file, fix some routing issues

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,10 @@
 {
   "name": "about-civic",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:ohcnetwork/care_fe.git"
+  },
   "version": "0.0.0",
   "type": "module",
   "scripts": {
